fixed page element alignment issues resulting from refactoring of code

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -81,7 +81,7 @@ body {
 .related-video-image span {
   position: absolute;
   color: #fff;
-  bottom: 35px;
+  bottom: 12px;
   right: 16px;
   font-weight: 600;
   background: #000;
@@ -106,7 +106,7 @@ body {
 #up-next-video span {
   position: absolute;
   color: #fff;
-  bottom: 18px;
+  bottom: 10px;
   right: 16px;
   font-weight: 600;
   background: #000;
@@ -358,6 +358,10 @@ body {
 
 .comment-img {
   display: inline-block;
+}
+
+.comment-image {
+  border-radius: 50%;
 }
 
 .username {
